--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "bootstrap-notify": "3.1.3",
     "chart.js": "2.9.3",
     "chartist": "0.11.4",
+    "chartjs-plugin-zoom": "^0.7.7",
     "core-js": "3.6.5",
     "express": "4.17.1",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "3.5.1",
     "moment": "2.29.1",
+    "ngx-spinner": "^10.0.1",
     "ngx-toastr": "13.1.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.2",
